<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home"
        android:enabled="true"
        android:icon="@drawable/home_icon"
        android:title="@string/home_navbar_menu" />
    <item
        android:id="@+id/course"
        android:enabled="true"
        android:icon="@drawable/course_icon"
        android:title="@string/kursus_navbar_menu" />

    <item
        android:id="@+id/product"
        android:enabled="true"
        android:icon="@drawable/product_icon"
        android:title="@string/product_navbar_menu" />

    <item
        android:id="@+id/profile"
        android:enabled="true"
        android:icon="@drawable/profile_icon"
        android:title="@string/profil_navbar_menu" />
</menu>