<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primary_blue"
        tools:context=".onboard.OnBoardFragment">

        <ImageView
            android:id="@+id/second_onboarding_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="24dp"
            android:contentDescription="@string/cd"
            android:src="@drawable/image_on_boarding_2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/second_onboarding_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/nunito"
            android:text="@string/on_board_2_title"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="@dimen/title_size"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/second_onboarding_image"
            app:layout_constraintStart_toStartOf="@+id/second_onboarding_image"
            app:layout_constraintTop_toBottomOf="@+id/second_onboarding_image" />

        <TextView
            android:id="@+id/second_onboarding_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/nunito"
            android:text="@string/on_board_2_description"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="@dimen/sub_title_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/second_onboarding_title" />

        <com.project.ivlab.CustomButton
            android:id="@+id/finish_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/background_orange_button"
            android:fontFamily="@font/nunito"
            android:text="@string/selesai"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/second_onboarding_text"
            app:layout_constraintVertical_bias="0.3" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>