<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="detailCourseViewModel"
            type="com.project.ivlab.course.DetailCourseViewModel" />

        <variable
            name="materiViewModel"
            type="com.project.ivlab.course.materi.MateriViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:background="@android:color/white"
        android:layout_height="match_parent"
        tools:context=".product.DetailProductFragment">

        <androidx.core.widget.NestedScrollView
            android:id="@+id/nestedScrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <ImageView
                    android:id="@+id/imageView8"
                    android:layout_width="match_parent"
                    android:layout_height="350dp"
                    android:contentDescription="@string/cd"
                    android:scaleType="centerCrop"
                    tools:src="@drawable/dummy_photo_product"
                    imageUrlCourse="@{detailCourseViewModel.selectedProperty.fotoCover}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView16"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="24dp"
                    android:fontFamily="@font/nunito"
                    android:maxLines="2"
                    android:text="@{detailCourseViewModel.selectedProperty.nama_pelatihan}"
                    tools:text="@string/membuat_design_packaging_yang_menarik"
                    android:textColor="@color/text_title"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageView8" />

                <TextView
                    android:id="@+id/textView17"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:drawablePadding="6dp"
                    android:fontFamily="@font/nunito"
                    tools:text="@string/ivlab_team"
                    android:textColor="@color/text_sub_title"
                    android:text="@{detailCourseViewModel.selectedProperty.mentor}"
                    app:drawableLeftCompat="@drawable/ic_baseline_person_24"
                    app:layout_constraintStart_toStartOf="@+id/textView16"
                    app:layout_constraintTop_toBottomOf="@+id/textView16" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="24dp"
                    android:drawablePadding="6dp"
                    android:fontFamily="@font/nunito"
                    android:text="@string/_56_enrolled"
                    android:textColor="@color/blue_button"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView16" />


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraintLayout3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="24dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView17">

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:fontFamily="@font/nunito"
                        android:text="@string/deskripsi"
                        android:textColor="@color/text_sub_title"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/textView9"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@{detailCourseViewModel.selectedProperty.deskripsi}"
                        android:fontFamily="@font/nunito"
                        android:justificationMode="inter_word"
                        tools:text="@string/robusta_adalah_salah_satu_jenis_tanaman_kopi_dengan_nama_ilmiah_coffea_canephora_nama_robusta_diambil_dari_kata_robust_istilah_dalam_bahasa_inggris_yang_artinya_kuat_sesuai_dengan_namanya_minuman_yang_diekstrak_dari_biji_kopi_robusta_memiliki_cita_rasa_yang_kuat_dan_cenderung_lebih_pahit_dibanding_arabika"
                        android:textColor="@color/text_description"
                        app:layout_constraintTop_toBottomOf="@+id/textView8"
                        tools:targetApi="o" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp"
                        android:fontFamily="@font/nunito"
                        android:text="@string/materi_pelatihan"
                        android:textColor="@color/text_sub_title"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView9" />


                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_view_materi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginBottom="170dp"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    android:layout_marginTop="8dp"
                    listMateriCourse="@{materiViewModel.properties}"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/constraintLayout3"
                    tools:listitem="@layout/materi_course_item" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.92">

            <com.project.ivlab.CustomButton
                android:id="@+id/buttom_enroll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/background_blue_button"
                android:fontFamily="@font/nunito"
                android:text="@string/enroll_pelatihan_ini"
                android:textColor="@android:color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>