<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <data>


        <variable
            name="home"
            type="com.project.ivlab.home.HomeViewModel" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:background="@android:color/white"
            android:layout_height="match_parent">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_bottom_curve_blue"
                android:paddingBottom="42dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:context=".login.LoginFragment">

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="60dp"
                    android:layout_height="20dp"
                    android:layout_marginTop="62dp"
                    android:contentDescription="@string/cd"
                    android:src="@drawable/logo"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.12"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:fontFamily="@font/nunito"
                    android:textAlignment="center"
                    android:textColor="@android:color/white"
                    android:textSize="32sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageView3"
                    tools:text="@string/innovation_n_through_the_limit" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/nunito"
                    android:textColor="@color/orange_button"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView"
                    tools:text="@string/temukan_referensi_dan_insight_disini" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/search"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="24dp"
                    android:background="@drawable/background_search_curve"
                    android:drawableEnd="@drawable/ic_search_black_24dp"
                    android:drawableTint="@color/orange_button"
                    android:fontFamily="@font/nunito"
                    android:hint="@string/cari_produk_atau_pelatihan"
                    android:paddingStart="20dp"
                    android:paddingTop="16dp"
                    android:paddingEnd="20dp"
                    android:paddingBottom="16dp"
                    android:singleLine="true"
                    android:textAlignment="viewStart"
                    android:textColor="@color/colorText"
                    android:textDirection="locale"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView2" />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/textView22"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/nunito"
                android:text="@string/pelatihan"
                android:textColor="@color/text_title"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout6" />

            <TextView
                android:id="@+id/textView23"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:fontFamily="@font/nunito"
                android:text="@string/lihat_semua"
                android:textColor="@color/orange_button"
                app:layout_constraintBottom_toBottomOf="@+id/textView22"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textView22" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewCourseHome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginEnd="24dp"
                android:layout_marginStart="24dp"
                listDataCourse="@{home.courseProperty}"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView22"
                tools:ignore="RtlSymmetry"
                tools:itemCount="3"
                tools:listitem="@layout/course_item" />

            <TextView
                android:id="@+id/textView25"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:fontFamily="@font/nunito"
                android:text="@string/kategori_produk"
                android:textColor="@color/text_title"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/recyclerViewCourseHome" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:fontFamily="@font/nunito"
                android:text="@string/lihat_semua"
                android:textColor="@color/orange_button"
                app:layout_constraintBottom_toBottomOf="@+id/textView25"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textView25" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewKategoriHome"
                listDataKategori="@{home.kategoriProperty}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="72dp"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView25"
                tools:itemCount="3"
                tools:listitem="@layout/category_item" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>


</layout>